--- a/Extension.html
+++ b/Extension.html
@@ -63,7 +63,10 @@
             <div class="image-container">
                 <img src="Image/Research/Screenshot 2024-11-25 190510.png" alt="Extension" class="big-image">
             </div>
-            <p>The Extension program at PRMSU College of Engineering provides support to various communities through educational and technical assistance. This program ensures that knowledge and expertise are extended beyond the campus and into the community.</p>
+            <p>The College of Engineering Research and Extension Framework...
+
+
+                Contents to be updated soon...</p>
         </div>
     </section>
 
@@ -75,8 +78,7 @@
                 <img src="Image/Screenshot 2024-11-28 001410.png" alt="Accomplishment" class="big-image">
             </div>
             <div class="accomplishment-info">
-                <h3>Title of Accomplishment</h3>
-                <p>Describe the accomplishment here. Mention key achievements and contributions made by the College of Engineering through the Extension program.</p>
+                <h3>BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association</h3>
             </div>
         </div>
     </section>
@@ -89,9 +91,9 @@
             <div id="report-list" class="report-list">
                 <h3>Reports by Year</h3>
                 <ul>
-                    <li><a href="#">2024 - Program 1, Project 1</a></li>
-                    <li><a href="#">2023 - Program 2, Project 2</a></li>
-                    <li><a href="#">2022 - Program 3, Project 3</a></li>
+                    <li><a href="#">Accomplishment Report 2021</a></li>
+                    <li><a href="#">Accomplishment Report 2022</a></li>
+                    <li><a href="#">Programs, Projects and Activities</a></li>
                 </ul>
             </div>
         </div>
