--- a/Research.html
+++ b/Research.html
@@ -91,18 +91,18 @@
         <div class="publications">
             <h3>Publications</h3>
             <ul>
-                <li>Research Journal 2020</li>
-                <li>Research Journal 2019</li>
+                <li><a href="#">Research Journal 2020</a></li>
+                <li><a href="https://drive.google.com/file/d/1D0A_tihMA52JyBupAmUC9wPHaWG01ue-/view">Research Journal 2019</a></li>
             </ul>
         </div>
 
         <div class="documents">
             <h3>Documents</h3>
             <ul>
-                <li>PRMSU Intellectual Property Rights Manual</li>
-                <li>Research Manual of Operations 2022</li>
-                <li>RMTU Research Manual 2017</li>
-                <li>2017-2022 Harmonized R and D Agenda</li>
+                <li><a href="https://drive.google.com/file/d/1JRwwACpxtTxdf_2pDQyGw2Tqvsy2JGxE/view">PRMSU Intellectual Propoerty Rights Manual</a></li>
+                <li><a href="https://drive.google.com/file/d/12zq2nwBMpu8rilk5SE04L45-8bUkynxA/view">Research Manual of Operations 2022</a></li>
+                <li><a href="https://drive.google.com/file/d/1qu8FZ21f_pSlViZx4RZJdNiqcrjJkkmF/view">RMTU Research Manual 2017</a></li>
+                <li><a href="#">2017-2022 Harmonized R and D Agenda</a></li>
             </ul>
         </div>
     </section>
