--- a/Extension.html
+++ b/Extension.html
@@ -63,10 +63,7 @@
             <div class="image-container">
                 <img src="Image/Research/Screenshot 2024-11-25 190510.png" alt="Extension" class="big-image">
             </div>
-            <p>The College of Engineering Research and Extension Framework...
-
-
-                Contents to be updated soon...</p>
+            <p>The College of Engineering Research and Extension Framework... Contents to be updated soon...</p>
         </div>
     </section>
 
